Correctly lay out elements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p>You <em>know</em> you want to.</p>
         </div>
         <div class="form-container">
-            <h2>Lets do this</h2>
+            <h2 id="dothis">Lets do this</h2>
             <form id="coolform">
                 <div>
                     <ul>
@@ -41,8 +41,10 @@
         <div>
             
         </div>
-        <button type="submit" id="btn-create-account">Create an account</button>
-        <p>Already have an account? <a href="#">Log in</a></p>
+        <div class="below-card">
+            <button type="submit" id="btn-create-account">Create an account</button>
+            <p>Already have an account? <a href="#">Log in</a></p>
+        </div>
       </div>
     </div>
   </body>
