--- a/index.html
+++ b/index.html
@@ -11,25 +11,29 @@
     <div class="main-container">
       <div class="left-container">
         <img src="./img/pexels-kevin-ku-577585.jpg" alt="blurry image of a computer screen with laid out glasses with the screen clearly visible through them" id="imig"/>
+        <div id="black-background">
+        </div>
         <div id="company">Vynxlabs</div>
       </div>
       <div class="right-container">
         <div class="wording">
-          <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
-          <p>Singup <em>now</em> to get started.</p>
-          <p>You <em>know</em> you want to.</p>
+          <h1>
+            <p id="wording1">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+            <p id="wording2">Singup <em>now</em> to get started.</p>
+            <p id="wording3">You <em>know</em> you want to.</p>
+          </h1>
         </div>
         <div class="form-container">
-            <h2 id="dothis">Lets do this</h2>
+            <h1 id="dothis">Lets do this</h1>
             <form id="coolform">
-                <div>
+                <div id="form-left">
                     <ul>
                         <li><label for="">FIRST NAME<input type="text"></label></li>
                         <li><label for="">EMAIL<input type="text"></label></li>
                         <li><label for="">PASSWORD<input type="text"></label></li>
                     </ul>
                 </div>
-                <div>
+                <div id="form-right">
                     <ul>
                         <li><label for="">LAST NAME<input type="text"></label></li>
                         <li><label for="">PHONE NUMBER<input type="text"></label></li>
@@ -42,8 +46,8 @@
             
         </div>
         <div class="below-card">
-            <button type="submit" id="btn-create-account">Create an account</button>
-            <p>Already have an account? <a href="#">Log in</a></p>
+            <button type="submit" id="btn-create-account">Create account</button>
+            <p>Already have an account? <a href="#" class="link">Log in</a></p>
         </div>
       </div>
     </div>
