--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             <form id="coolform">
                 <div id="form-left">
                     <ul>
-                        <li><label for="">FIRST NAME<input type="text"></label></li>
-                        <li><label for="">EMAIL<input type="text"></label></li>
-                        <li><label for="">PASSWORD<input type="text"></label></li>
+                        <li class="input"><label for="">FIRST NAME<input type="text"></label></li>
+                        <li class="input"><label for="">EMAIL<input type="text"></label></li>
+                        <li class="input"><label for="">PASSWORD<input type="text"></label></li>
                     </ul>
                 </div>
                 <div id="form-right">
                     <ul>
-                        <li><label for="">LAST NAME<input type="text"></label></li>
-                        <li><label for="">PHONE NUMBER<input type="text"></label></li>
-                        <li><label for="">CONFIRM PASSWORD<input type="text"></label></li>
+                        <li class="input"><label for="">LAST NAME<input type="text"></label></li>
+                        <li class="input"><label for="">PHONE NUMBER<input type="text"></label></li>
+                        <li class="input"><label for="">CONFIRM PASSWORD<input type="text"></label></li>
                     </ul>
                 </div>
             </form>
