--- a/index.html
+++ b/index.html
@@ -10,44 +10,63 @@
   <body>
     <div class="main-container">
       <div class="left-container">
-        <img src="./img/pexels-kevin-ku-577585.jpg" alt="blurry image of a computer screen with laid out glasses with the screen clearly visible through them" id="imig"/>
-        <div id="black-background">
-        </div>
+        <img
+          src="./img/pexels-kevin-ku-577585.jpg"
+          alt="blurry image of a computer screen with laid out glasses with the screen clearly visible through them"
+          id="imig"
+        />
+        <div id="black-background"></div>
         <div id="company">Vynxlabs</div>
       </div>
       <div class="right-container">
         <div class="wording">
           <h1>
-            <p id="wording1">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+            <p id="wording1">
+              This is not a real online service! You know you need something
+              like this in your life to help you realize your deepest dreams.
+            </p>
             <p id="wording2">Singup <em>now</em> to get started.</p>
             <p id="wording3">You <em>know</em> you want to.</p>
           </h1>
         </div>
         <div class="form-container">
-            <h1 id="dothis">Lets do this</h1>
-            <form id="coolform">
-                <div id="form-left">
-                    <ul>
-                        <li class="input"><label for="">FIRST NAME<input type="text"></label></li>
-                        <li class="input"><label for="">EMAIL<input type="text"></label></li>
-                        <li class="input"><label for="">PASSWORD<input type="text"></label></li>
-                    </ul>
-                </div>
-                <div id="form-right">
-                    <ul>
-                        <li class="input"><label for="">LAST NAME<input type="text"></label></li>
-                        <li class="input"><label for="">PHONE NUMBER<input type="text"></label></li>
-                        <li class="input"><label for="">CONFIRM PASSWORD<input type="text"></label></li>
-                    </ul>
-                </div>
-            </form>
-        </div>
-        <div>
-            
+          <h1 id="dothis">Lets do this</h1>
+          <form id="coolform">
+            <div id="form-left">
+              <ul>
+                <li class="input">
+                  <label for="">FIRST NAME<input type="text" /></label>
+                </li>
+                <li class="input">
+                  <label for="">EMAIL<input type="email" /></label>
+                </li>
+                <li class="input">
+                  <label for=""
+                    >PASSWORD<input type="password" required/><span></span
+                  ></label>
+                </li>
+              </ul>
+            </div>
+            <div id="form-right">
+              <ul>
+                <li class="input">
+                  <label for="">LAST NAME<input type="text" /></label>
+                </li>
+                <li class="input">
+                  <label for="">PHONE NUMBER<input type="tel" /></label>
+                </li>
+                <li class="input">
+                  <label for=""
+                    >CONFIRM PASSWORD<input type="password"
+                  /></label>
+                </li>
+              </ul>
+            </div>
+          </form>
         </div>
         <div class="below-card">
-            <button type="submit" id="btn-create-account">Create account</button>
-            <p>Already have an account? <a href="#" class="link">Log in</a></p>
+          <button type="submit" id="btn-create-account">Create account</button>
+          <p>Already have an account? <a href="#" class="link">Log in</a></p>
         </div>
       </div>
     </div>
